# dataq-py

./: README.md  main.py  pyproject.toml  readme.md
.devcontainer/: devcontainer.json  dockerfile
inputs/: client-supplier.xlsx  notes.md
src/dquality/: report_exporter.py
