[project]
name = "dquality"
version = "0.1.0"
description = "Data quality calculator"
readme = "readme.md"
authors = [
    { name = "Chetan Singh Sajwan", email = "76040441+chetansinghsajwan@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "mypy", "pytest", "pytest-cov", "ipython"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
strict = true
ignore_missing_imports = true
